@@ -30,33 +30,40 @@ subtest 'setops work properly re a group_by' => sub {
     return $rs->search(
       { name => $name },
       {
-        join     => ['albums'],
+        join => ['albums'],
         # TODO - apparently, we must do the bang version of group_by, or else group_by
         # will simply hide inside of the `order_by` clause + not get seen by SQLA2
         '!group_by' => ['name'],
-        columns  => [ { name => \'name' }, { count => \'count(albumid) as count' } ]
+        columns     => [ { name => \'name' }, { count => \'count(albumid) as count' } ]
       }
     );
   };
   my $portis = $count_rs->('Portishead');
   my $stone  = $count_rs->('Stone Roses');
-  
+
   like [ $portis->search(undef, { '!union' => $stone->as_query, order_by => 'name' })->all ],
-  [ { name => 'Portishead', count => 3 }, { name => 'Stone Roses', count => 1 }], 'unions work as expected';
+      [ { name => 'Portishead', count => 3 }, { name => 'Stone Roses', count => 1 } ], 'unions work as expected';
 
 };
 
 subtest 'joins with using actually work' => sub {
-  like $schema->resultset('Artist')
+  my $using_list = [qw/artistid/];
+  my $rs         = $schema->resultset('Artist')
       ->search(
         { 'album.title' => 'Second Coming' },
         {
           '!from' => sub ($sqla, $from) {
             my $base = $sqla->expand_expr({ -old_from => $from });
-            return [ $base, -join => [ 'album', using => 'artistid' ] ];
+            return [ $base, -join => [ 'album', using => $using_list ] ];
           }
         }
-  )->first, { name => 'Stone Roses' }, 'gets the right artist when using `using`';
+      );
+  like $rs->first, { name => 'Stone Roses' }, 'gets the right artist when using `using`';
+
+  # there's gotta be a better way to test this
+  push $using_list->@*, 'nonexistent';
+  like dies { $rs->first }, qr/\QUSING ( artistid, nonexistent )/, 'rendered right!';
+
 };
 
 done_testing;
